feat(metrics): durable CloudWatch buffer via ggstreamlog host-callback sink
Give the direct `cloudwatch` metric target a durable, disk-backed store-and-forward
buffer that drains PutMetricData on reconnect, by reusing the ggstreamlog durable
log + export engine via a new host-callback sink (an additive third sink kind
alongside the native Kinesis/Kafka sinks). On a lengthy cloud disconnect the
component keeps running with flat memory and a disk-bounded backlog (dropOldest),
drains on reconnect, and drops datums aged past CloudWatch's accept window.

- core (rust-streamlog): SinkConfig::Callback + CallbackSink; ggsl_set_sink_callback C-ABI
- Rust lib: CloudWatchSink (off-by-default feature metrics-cloudwatch-durable)
- Java (canonical): Panama upcall + CloudWatchDrain; also resolves the streaming
  buffer-path template (closes a known Java template-resolution gap)
- TypeScript: napi threadsafe-function bridge + DurableCloudWatchTarget
- Python: PyO3 GIL callback + cloudwatch_durable.py
- schema: additive `buffer` block on the cloudwatch target (durable|memory,
  default durable), synced into all 5 lib copies
- unit + disconnect fault-injection tests per track; new-code coverage >=94%
  (Python 100%, TS 98%, Java 94-100%, Rust core 92.6%, Rust lib 95.76%)

Also fixes a pre-existing stale doctest in libs/rust config/validation.rs (a
config without the required top-level `component` correctly fails validation).

Design + status: docs/CLOUDWATCH_DURABLE_METRICS.md

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01M9YQ7qy7oTpToRjbhHFK5o